<?xml version="1.0"?>
<package format="2">
  <name>plexil_actionlib</name>
  <version>0.1.0</version>
  <description>The plexil_actionlib package</description>

  <maintainer email="jrbohren@honeybeerobotics.com">Jonathan Bohren</maintainer>

  <license>Apache2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>plexil</depend>
  <depend>actionlib</depend>

  <export>
  </export>
</package>
